--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
-            <li><a href="PDF/Cartner_CV_web_Dec25.pdf" target="_blank">CV</a></li>
+            <li><a href="PDF/Cartner_CV_web_Feb26.pdf" target="_blank">CV</a></li>
           </ul>
         </nav>
       </section>
@@ -38,7 +38,7 @@
         </section>
 
         <section class="text">
-          <p> I am a PhD candidate in the Linguistics Department at Tel Aviv University, advised by <a href="https://english.tau.ac.il/profile/horvath" target="_blank">Julia Horvath</a>. </p>
+          <p> I am a PhD candidate in the Linguistics Department at Tel Aviv University, supervised by <a href="https://english.tau.ac.il/profile/horvath" target="_blank">Julia Horvath</a>. </p>
 
           <p> I am currently a visiting scholar in the Department of Linguistics at UC Santa Cruz for the 2025–26 academic year.</p>
 
@@ -47,7 +47,7 @@
           <p> In my dissertation, I study syntactic constraints on bilingual code-switching. I am interested in the division of labour between grammatical modules and the content of the lexicon, and focus on cyclicity, agreement, and movement in intra-sentential code-switching. My research is based on data from Hebrew-English bilinguals collected using psycholinguistic methods.</p>
 
 
-          <p> <b>Contact:</b> mandycartner@mail.tau.ac.il </p>
+          <p> <b>Contact:</b> <a href="mandycartner@mail.tau.ac.il" target="_blank">mandycartner@mail.tau.ac.il</a></p>
         </section>
 
       </div>
@@ -55,7 +55,7 @@
     </section>
 
     <section class="footer">
-          Last updated: December 2025
+          Last updated: February 2026
         </section>
 
 
