--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
-            <li><a href="PDF/Cartner_CV_web_Dec25.pdf" target="_blank">CV</a></li>
+            <li><a href="PDF/Cartner_CV_web_Feb26.pdf" target="_blank">CV</a></li>
           </ul>
         </nav>
       </section>
@@ -38,38 +38,59 @@
 <h2>Journal articles</h2>
 
 
-<p>
-Keshev, M., Cartner, M., Meltzer-Asscher, A., and Dillon, B. (Undergoing revisions). Representation distortion contributes to agreement attraction in comprehension.
-</p>
+<div class="pub-list">
 
-<p>
-  Cartner, M.*, Kogan, M.*, Webster, N.*, Wagers, M., and Sichel, I. (Undergoing revisions). Subject islands do not reduce to construction-specific discourse function. (* = co-first authors) (<a href="PDF/Cartner_et_al_2025_Islands.pdf" target="_blank">Preprint</a>)
-</p>
+<div class="pub-row">
+    <div class="pub-year">Under review</div>
+    <div class="pub-info">
+      <b>Cartner, M.</b>, Meltzer-Asscher, A., Dillon, B., and Keshev, M. Composite feature representations license agreement errors.
+    </div>
+  </div>
 
-<p>
-  Cartner, M., Meltzer-Asscher, A., and Horvath, J. (Under review). Late insertion in code-switching: Evidence from gender agreement strategies of Hebrew-English bilinguals. 
-</p>
+  <div class="pub-row">
+    <div class="pub-year"></div>
+    <div class="pub-info">
+     <b>Cartner, M.</b>, Meltzer-Asscher, A., and Horvath, J. Late insertion in code-switching: Evidence from gender agreement patterns of Hebrew-English bilinguals.
+    </div>
+  </div>
 
+  <div class="pub-row">
+    <div class="pub-year"></div>
+    <div class="pub-info">
+     <b>Cartner, M.</b> and Horvath, J. Intra-sentential code-switching at the syntax-phonology interface. (<a href="PDF/Cartner_Horvath_2025_syn-pros.pdf" target="_blank">Preprint</a>)
+    </div>
+  </div>
 
-<p>
-  Keshev, M., Cartner, M., Meltzer‐Asscher, A., and Dillon, B. (2024). A working memory model of sentence processing as binding morphemes to syntactic positions. <em>Topics in Cognitive Science</em>. (<a href="PDF/TopiCS_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">PDF</a>)
-</p>
+<div class="pub-row">
+    <div class="pub-year">In press</div>
+    <div class="pub-info">
+     <b>Cartner, M.</b>*, Kogan, M.*, Webster, N.*, Wagers, M., and Sichel, I. Subject islands do not reduce to construction-specific discourse function. (* = co-first authors) (<a href="PDF/Cartner_et_al_2025_Islands.pdf" target="_blank">Preprint</a>)
+    </div>
+  </div>
+  
 
-<p>
-  Katz, Y. Z., Cartner, M., and Siloni, T. (2021). Garden Path: Reanalysis as Last Resort. <em>Language and Brain</em>. (<a href="https://www.language-brain.com/journal/docs/Katz_Cartner_Siloni_LanguageBrain15_GardenPath.pdf" target="_blank">PDF</a>) 
-</p>
+  <div class="pub-row">
+    <div class="pub-year">2026</div>
+    <div class="pub-info">
+      Keshev, M., <b>Cartner, M.</b>, Meltzer-Asscher, A., and Dillon, B. Representation distortion contributes to agreement attraction in comprehension. Frontiers in Language Sciences, 4, 1708378. (<a href="PDF/Keshev_et_al_2026_distortion.pdf" target="_blank">PDF</a>)
+    </div>
+  </div>
 
-<br>
+<div class="pub-row">
+    <div class="pub-year">2024</div>
+    <div class="pub-info">
+      Keshev, M., Cartner, M., Meltzer‐Asscher, A., and Dillon, B.  A working memory model of sentence processing as binding morphemes to syntactic positions. <em>Topics in Cognitive Science</em>. (<a href="PDF/TopiCS_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">PDF</a>)
+    </div>
+  </div>
 
-<h2>Conference proceedings</h2>
+<div class="pub-row">
+    <div class="pub-year">2021</div>
+    <div class="pub-info">
+      Katz, Y. Z., Cartner, M., and Siloni, T. Garden Path: Reanalysis as Last Resort. <em>Language and Brain</em>. (<a href="https://www.language-brain.com/journal/docs/Katz_Cartner_Siloni_LanguageBrain15_GardenPath.pdf" target="_blank">PDF</a>) 
+    </div>
+  </div>
 
-<p>
-Cartner, M. and Horvath, J. (Under review). Intra-sentential code-switching at the syntax-phonology interface. (<a href="PDF/Cartner_Horvath_2025_syn-pros.pdf" target="_blank">Preprint</a>)
-</p>
-
-<p>
-  Keshev, M., Cartner, M., Meltzer‐Asscher, A., and Dillon, B. (2024). A working memory model of sentence processing as binding morphemes to syntactic positions. <em>Proceedings of the Annual Meeting of the Cognitive Science Society</em>, 46(0). (<a href="PDF/CogSci_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">PDF</a>)
-</p>
+</div>
 
 <br>
 
@@ -128,11 +149,14 @@ Cartner, M. and Keshev, M. Optional resumption is used to overcome ambiguity in 
 Cartner, M., Sichel, I., Toosarvandani, M. and Wagers, M. Predictive parsing as a source for resumptive pronoun preference in Hebrew. Poster at the 36th Annual Conference on Human Sentence Processing (HSP). University of Pittsburgh, Pittsburgh, PA, USA. March 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_RP.pdf" target="_blank">poster</a>)
 </p>
 
+<br>
 
-
+<p class="note">
+  If you’re looking for materials that aren’t listed here, feel free to email me at
+  <a href="mailto:mandycartner@mail.tau.ac.il">mandycartner@mail.tau.ac.il</a>
+</p>
 
       </section>
-
     </section>
 
   </body>
