--- a/research.html
+++ b/research.html
@@ -62,31 +62,31 @@
   </div>
 
 <div class="pub-row">
-    <div class="pub-year">In press</div>
+    <div class="pub-year">2026</div>
     <div class="pub-info">
-     <b>Cartner, M.</b>*, Kogan, M.*, Webster, N.*, Wagers, M., and Sichel, I. Subject islands do not reduce to construction-specific discourse function. (* = co-first authors) (<a href="PDF/Cartner_et_al_2025_Islands.pdf" target="_blank">Preprint</a>)
+     <b>Cartner, M.</b>*, Kogan, M.*, Webster, N.*, Wagers, M., and Sichel, I. (* = co-first authors). Subject islands do not reduce to construction-specific discourse function. <em>Cognition</em>, 271. (<a href="PDF/Cartner_et_al_2026_Islands.pdf" target="_blank">PDF</a>)
     </div>
   </div>
   
 
   <div class="pub-row">
-    <div class="pub-year">2026</div>
+    <div class="pub-year"></div>
     <div class="pub-info">
-      Keshev, M., <b>Cartner, M.</b>, Meltzer-Asscher, A., and Dillon, B. Representation distortion contributes to agreement attraction in comprehension. Frontiers in Language Sciences, 4, 1708378. (<a href="PDF/Keshev_et_al_2026_distortion.pdf" target="_blank">PDF</a>)
+      Keshev, M., <b>Cartner, M.</b>, Meltzer-Asscher, A., and Dillon, B. Representation distortion contributes to agreement attraction in comprehension. <em>Frontiers in Language Sciences</em>, 4, 1708378. (<a href="PDF/Keshev_et_al_2026_distortion.pdf" target="_blank">PDF</a>)
     </div>
   </div>
 
 <div class="pub-row">
     <div class="pub-year">2024</div>
     <div class="pub-info">
-      Keshev, M., Cartner, M., Meltzer‐Asscher, A., and Dillon, B.  A working memory model of sentence processing as binding morphemes to syntactic positions. <em>Topics in Cognitive Science</em>. (<a href="PDF/TopiCS_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">PDF</a>)
+      Keshev, M., <b>Cartner, M.</b>, Meltzer‐Asscher, A., and Dillon, B.  A working memory model of sentence processing as binding morphemes to syntactic positions. <em>Topics in Cognitive Science</em>. (<a href="PDF/TopiCS_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">PDF</a>)
     </div>
   </div>
 
 <div class="pub-row">
     <div class="pub-year">2021</div>
     <div class="pub-info">
-      Katz, Y. Z., Cartner, M., and Siloni, T. Garden Path: Reanalysis as Last Resort. <em>Language and Brain</em>. (<a href="https://www.language-brain.com/journal/docs/Katz_Cartner_Siloni_LanguageBrain15_GardenPath.pdf" target="_blank">PDF</a>) 
+      Katz, Y. Z., <b>Cartner, M.</b>, and Siloni, T. Garden Path: Reanalysis as Last Resort. <em>Language and Brain</em>. (<a href="https://www.language-brain.com/journal/docs/Katz_Cartner_Siloni_LanguageBrain15_GardenPath.pdf" target="_blank">PDF</a>) 
     </div>
   </div>
 
