--- a/research.html
+++ b/research.html
@@ -57,7 +57,7 @@
   <div class="pub-row">
     <div class="pub-year"></div>
     <div class="pub-info">
-     <b>Cartner, M.</b> and Horvath, J. Intra-sentential code-switching at the syntax-phonology interface. (<a href="PDF/Cartner_Horvath_2025_syn-pros.pdf" target="_blank">Preprint</a>)
+     <b>Cartner, M.</b> and Horvath, J. Intra-sentential code-switching at the syntax-prosody interface. (<a href="PDF/Cartner_Horvath_2025_syn-pros.pdf" target="_blank">Preprint</a>)
     </div>
   </div>
 
